--- a/scss/components/_navbar.scss
+++ b/scss/components/_navbar.scss
@@ -153,6 +153,10 @@ a {
   fill: $color-2;
 }
 
+.github-svg {
+  fill: $color-2;
+}
+
 .github-logo {
   fill: $color-2;
 }
